basic index modified

--- a/products.html
+++ b/products.html
@@ -57,7 +57,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-2 text-left">
-					<div id="fh5co-logo"><a href="index.html">Concept<span>.</span></a></div>
+					<div id="fh5co-logo"><a href="index.html">VirtualDesk<span>.</span></a></div>
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
@@ -76,6 +76,7 @@
 						<li><a href="about.html">About</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="contact.html">Contact</a></li>
+						<li class="btn-cta"><a href="login.html"><span>LOGIN</span></a></li>
 					</ul>
 				</div>
 			</div>
