--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
+
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
@@ -65,7 +66,7 @@
 						<li><a href="services.html">Features</a></li>
 						<li><a href="about.html">About</a></li>
 						<li><a href="contact.html">Contact</a></li>
-						<li class="btn-cta"><a href="contact.html"><span>LOGIN</span></a></li>
+						<li class="btn-cta"><a href="login.html"><span>LOGIN</span></a></li>
 					</ul>
 				</div>
 			</div>
@@ -82,7 +83,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeInUp">
 							<h1 class="mb30">With VirtualDesk bring your workspace to you</h1>
 							<p>
-								<a href="#register" target="_blank" class="btn btn-primary">Register</a>
+								<a href="#register" id='regScroll' class="btn btn-primary">Register</a>
 							</p>
 						</div>
 					</div>
@@ -124,7 +125,178 @@
 				<div class="col-md-3 col-sm-6 ">
 					<div class="feature-center animate-box" data-animate-effect="fadeInUp">
 						<span class="icon">
-							<i class="icon-command"></i>
+							<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 480 480" style="enable-background:new 0 0 480 480;" xml:space="preserve">
+<g>
+	<g>
+		<rect x="168" y="160" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="168" y="192" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="168" y="224" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="168" y="256" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="200" y="160" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="200" y="192" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="200" y="224" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="200" y="256" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="232" y="160" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="232" y="192" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="232" y="224" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="232" y="256" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="264" y="160" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="200" y="128" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="232" y="128" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="264" y="128" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="264" y="192" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="264" y="224" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="264" y="256" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="296" y="160" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="296" y="192" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="296" y="224" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="296" y="256" width="16" height="16"/>
+	</g>
+</g>
+<g>
+	<g>
+		<path d="M472.009,120c-0.003,0-0.006,0-0.009,0H352V8c0.003-4.416-3.575-7.997-7.991-8c-0.003,0-0.006,0-0.009,0H136
+			c-4.416-0.003-7.997,3.575-8,7.991c0,0.003,0,0.006,0,0.009v112H8c-4.416-0.003-7.997,3.575-8,7.991c0,0.003,0,0.006,0,0.009v288
+			c-0.003,4.416,3.575,7.997,7.991,8c0.003,0,0.006,0,0.009,0h16.723c-0.464,2.642-0.706,5.318-0.723,8v40
+			c-0.003,4.416,3.575,7.997,7.991,8c0.003,0,0.006,0,0.009,0h416c4.416,0.003,7.997-3.575,8-7.991c0-0.003,0-0.006,0-0.009v-40
+			c-0.016-2.682-0.258-5.358-0.723-8H472c4.416,0.003,7.997-3.575,8-7.991c0-0.003,0-0.006,0-0.009V128
+			C480.003,123.584,476.425,120.003,472.009,120z M344,344c0,8.837-7.163,16-16,16s-16-7.163-16-16s7.163-16,16-16
+			C336.832,328.011,343.989,335.168,344,344z M152,328c8.837,0,16,7.163,16,16s-7.163,16-16,16s-16-7.163-16-16
+			C136.011,335.168,143.168,328.011,152,328z M104,464H40v-32c0-17.673,14.327-32,32-32s32,14.327,32,32V464z M56,368
+			c0-8.837,7.163-16,16-16s16,7.163,16,16s-7.163,16-16,16C63.168,383.989,56.011,376.832,56,368z M105.212,397.425
+			c-3.017-2.91-6.4-5.414-10.064-7.449c12.202-12.784,11.731-33.04-1.053-45.243s-33.04-11.731-45.243,1.053
+			c-11.803,12.365-11.803,31.824,0,44.189c-7.636,4.238-13.98,10.467-18.358,18.024H16V136h112v187.056
+			c-10.986,12.327-10.615,31.039,0.852,42.92C116.852,372.613,108.253,384.053,105.212,397.425z M184,464h-64v-56
+			c0-17.673,14.327-32,32-32s32,14.327,32,32V464z M280,464h-80v-56c0-22.091,17.909-40,40-40c22.091,0,40,17.909,40,40V464z
+			 M216,328c0-13.255,10.745-24,24-24s24,10.745,24,24s-10.745,24-24,24C226.751,351.986,216.014,341.249,216,328z M288.722,380.495
+			c-5.357-9.444-13.327-17.139-22.953-22.16c16.897-14.232,19.057-39.467,4.826-56.364c-14.232-16.897-39.467-19.057-56.364-4.826
+			c-16.897,14.232-19.057,39.467-4.826,56.364c1.468,1.743,3.082,3.357,4.826,4.826c-9.626,5.021-17.596,12.716-22.953,22.16
+			c-4.206-6-9.722-10.965-16.13-14.519c12.265-12.547,12.037-32.662-0.511-44.927c-8.079-7.898-19.744-10.91-30.637-7.913V16h192
+			v297.136c-2.607-0.719-5.296-1.101-8-1.136c-17.626-0.047-31.953,14.204-32,31.831c-0.022,8.248,3.151,16.185,8.852,22.145
+			C298.444,369.53,292.928,374.495,288.722,380.495z M360,432v32h-64v-56c0-17.673,14.327-32,32-32c17.673,0,32,14.327,32,32V432z
+			 M440,464h-64v-32c0-17.673,14.327-32,32-32c17.673,0,32,14.327,32,32V464z M392,368c0-8.837,7.163-16,16-16s16,7.163,16,16
+			s-7.163,16-16,16C399.168,383.989,392.011,376.832,392,368z M464,408h-14.494c-4.378-7.557-10.722-13.786-18.358-18.024
+			c12.202-12.784,11.731-33.04-1.053-45.243c-12.784-12.202-33.04-11.731-45.243,1.053c-11.803,12.365-11.803,31.824,0,44.189
+			c-3.664,2.035-7.048,4.539-10.064,7.449c-3.04-13.372-11.64-24.812-23.64-31.449c11.467-11.881,11.839-30.593,0.853-42.92V136h112
+			V408z"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="376" y="184" width="16" height="128"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="424" y="184" width="16" height="128"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="40" y="184" width="16" height="128"/>
+	</g>
+</g>
+<g>
+	<g>
+		<rect x="88" y="184" width="16" height="128"/>
+	</g>
+</g>
+<g>
+	<g>
+		<path d="M288.009,32c-0.003,0-0.006,0-0.009,0h-96c-4.416-0.003-7.997,3.575-8,7.991c0,0.003,0,0.006,0,0.009v64
+			c-0.003,4.416,3.575,7.997,7.991,8c0.003,0,0.006,0,0.009,0h96c4.416,0.003,7.997-3.575,8-7.991c0-0.003,0-0.006,0-0.009V40
+			C296.003,35.584,292.425,32.003,288.009,32z M280,96h-80V48h80V96z"/>
+	</g>
+							</svg>
 						</span>
 						<h3>Register<br>your<br>Business</h3>
 						<p><a href="#">Register Now</a></p>
@@ -134,7 +306,41 @@
 				<div class="col-md-3 col-sm-6 ">
 					<div class="feature-center animate-box" data-animate-effect="fadeInUp">
 						<span class="icon">
-							<i class="icon-command"></i>
+							<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+							viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+					   <g>
+						   <g>
+							   <path d="M421.054,414.843c-4.142,0-7.5,3.358-7.5,7.5v70.514c0,2.283-1.858,4.141-4.141,4.141h-40.317V349.301
+								   c0-4.142-3.358-7.5-7.5-7.5c-4.142,0-7.5,3.358-7.5,7.5v147.698h-81.185l23.543-25.9c2.572-2.83,3.785-6.861,3.244-10.787
+								   c-0.01-0.076-0.022-0.152-0.035-0.228L277.24,327.617l6.041-9.094c3.34,2.372,5.913,4.656,10.738,4.656
+								   c4.908,0,9.497-2.747,11.755-7.269v-0.001l23.65-47.4l53.876,20.865c1.949,0.836,30.252,13.582,30.252,47.238v50.73
+								   c-0.001,4.141,3.357,7.5,7.5,7.5c4.142,0,7.5-3.358,7.5-7.5v-50.73c0-44.344-37.969-60.463-39.585-61.128
+								   c-0.047-0.02-0.095-0.039-0.143-0.057l-89.668-34.726v-21.03c14.242-11.076,24.117-27.495,26.596-46.227
+								   c7.101-0.5,13.69-3.152,19.071-7.779c7.027-6.043,11.059-14.838,11.059-24.126c0-7.708-2.781-15.068-7.737-20.803V92.953
+								   C348.144,41.699,306.446,0,255.192,0c-51.254,0-92.952,41.699-92.952,92.953v28.511c-5.009,5.677-7.733,12.665-7.733,20.074
+								   c0,9.291,4.03,18.085,11.059,24.129c5.377,4.625,11.962,7.274,19.061,7.775c2.499,19.083,12.662,36.114,28.117,47.339v19.92
+								   l-89.571,34.725c-0.047,0.018-0.094,0.037-0.141,0.056c-1.617,0.665-39.585,16.784-39.585,61.128v156.245
+								   c0,10.555,8.587,19.142,19.142,19.142h71.457c4.142,0,7.5-3.358,7.5-7.5c0-4.142-3.358-7.5-7.5-7.5h-16.137V349.301
+								   c0-4.142-3.358-7.5-7.5-7.5c-4.142,0-7.5,3.358-7.5,7.5v147.698h-40.319c-2.283,0-4.141-1.858-4.141-4.141V336.611
+								   c0-33.769,28.493-46.486,30.243-47.234l53.834-20.87l23.652,47.402c2.263,4.533,6.858,7.27,11.756,7.27
+								   c4.801,0,7.349-2.249,10.738-4.656l6.041,9.094l-22.421,132.468c-0.013,0.075-0.024,0.15-0.035,0.226
+								   c-0.542,3.924,0.671,7.957,3.244,10.789l23.543,25.9h-29.995c-4.142,0-7.5,3.358-7.5,7.5s3.358,7.5,7.5,7.5h200.365
+								   c10.555,0,19.142-8.588,19.142-19.142v-70.514C428.554,418.201,425.196,414.843,421.054,414.843z M315.375,263.069l-22.049,44.19
+								   c-0.548-0.389-12.233-8.691-26.517-18.834c6.198-7.651-1.053,1.299,27.235-33.617L315.375,263.069z M271.043,309.833l-5.718,8.607
+								   h-18.703l-5.718-8.607l15.07-10.703L271.043,309.833z M227.743,243.121v-14.036c9.112,3.673,18.85,5.376,28.36,5.376
+								   c9.833,0,19.476-2.096,28.052-5.846v14.567l-28.181,34.785L227.743,243.121z M340.881,141.539
+								   c-0.001,4.913-2.129,9.562-5.839,12.753c-2.453,2.11-5.416,3.459-8.661,3.987v-33.477
+								   C335.001,126.202,340.881,133.352,340.881,141.539z M184.007,158.279c-8.718-1.415-14.5-8.623-14.5-16.741
+								   c0-8.018,6.647-14.544,14.5-16.359V158.279z M184.41,109.896c-2.389,0.274-5.127,0.921-7.168,1.615V92.953
+								   c0-42.983,34.968-77.952,77.951-77.952c42.983,0,77.951,34.969,77.951,77.952v18.043c-2.18-0.663-4.441-1.101-6.762-1.307
+								   c0-7.237,0.063-5.841-23.612-31.294c-4.354-4.678-11.556-5.658-17.037-2.077c-26.13,17.069-58.005,25.644-87.415,23.532
+								   C191.867,99.367,185.991,103.616,184.41,109.896z M199.008,164.184v-46.792v-2.465c32.375,1.896,66.318-7.722,93.739-25.283
+								   c10.858,11.658,16.738,17.773,18.634,20.099c0,5.884,0,47.705,0,54.44c0,30.447-24.826,55.276-55.277,55.276
+								   C221.91,219.46,199.008,192.934,199.008,164.184z M218.623,307.259l-22.049-44.19l21.293-8.247l27.241,33.625
+								   C231.255,298.284,219.88,306.366,218.623,307.259z M227.228,461.702l21.709-128.263h14.071l21.709,128.263l-28.744,31.623
+								   L227.228,461.702z"/>
+						   </g>
+					   		</svg>
 						</span>
 						<h3>Register<br>as<br>Employee</h3>
 						<p></p>
@@ -226,11 +432,19 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-	
+
+
 	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
+	<script src="js/jquery.min.js"></script>		
 	<!-- jQuery Easing -->
 	<script src="js/jquery.easing.1.3.js"></script>
+	<!-- Smooth-Scroll -->
+	<script src="./js/smooth-scroll.polyfills.js"></script>
+	<script>
+		var scroll = new SmoothScroll('a[href*="#"]', {
+			speed: 800,
+		});
+	</script>
 	<!-- Bootstrap -->
 	<script src="js/bootstrap.min.js"></script>
 	<!-- Waypoints -->
