Cleared Redundant Code

--- a/services.html
+++ b/services.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Concept by gettemplates.co
+	VitualDesk by gettemplates.co
 	Twitter: http://twitter.com/gettemplateco
 	URL: http://gettemplates.co
 -->
@@ -8,11 +8,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Concept &mdash; Free Website Template, Free HTML5 Template by gettemplates.co</title>
+	<title>Services</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by gettemplates.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="gettemplates.co" />
+	
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -204,7 +202,7 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-4 fh5co-widget ">
-					<h3>Concept.</h3>
+					<h3>VitualDesk.</h3>
 					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
 					<p><a href="#">Learn More</a></p>
 				</div>
