--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 						</span>
 						<h3>Register<br>as<br>Employee</h3>
 						<p></p>
-						<p><a href="#">Register Now</a></p>
+						<p><a href="register4B.html">Register Now</a></p>
 					</div>
 				</div>
 
@@ -373,7 +373,7 @@
 				<div class="col-md-4 fh5co-widget ">
 					<h3>VitualDesk.</h3>
 					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-					<p><a href="#">Learn More</a></p>
+					<p><a href="register4E.html">Learn More</a></p>
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 ">
 					<ul class="fh5co-footer-links">
