--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
 				</div>
 				<div class="col-md-3 col-sm-6 ">
 					<div class="feature-center animate-box" data-animate-effect="fadeInUp">
-						<span class="icon">
+						<a href="register4B.html">
+							<span class="icon">
 							<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 480 480" style="enable-background:new 0 0 480 480;" xml:space="preserve">
 <g>
@@ -295,15 +296,17 @@
 			C296.003,35.584,292.425,32.003,288.009,32z M280,96h-80V48h80V96z"/>
 	</g>
 							</svg>
-						</span>
-						<h3>Register<br>your<br>Business</h3>
-						<p><a href="#">Register Now</a></p>
+							</span>
+							<h3>Register<br>your<br>Business</h3>
+							<p>Register Now</p>
+						</a>	
 					</div>
 				</div>
 				<div class="clearfix visible-sm-block"></div>
 				<div class="col-md-3 col-sm-6 ">
 					<div class="feature-center animate-box" data-animate-effect="fadeInUp">
-						<span class="icon">
+						<a href="register4E.html">
+							<span class="icon">
 							<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 							viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
 					   <g>
@@ -339,10 +342,11 @@
 								   L227.228,461.702z"/>
 						   </g>
 					   		</svg>
-						</span>
-						<h3>Register<br>as<br>Employee</h3>
-						<p></p>
-						<p><a href="register4B.html">Register Now</a></p>
+							</span>
+							<h3>Register<br>as<br>Employee</h3>
+							<p></p>
+							<p>Register Now</p>
+						</a>
 					</div>
 				</div>
 
@@ -373,7 +377,7 @@
 				<div class="col-md-4 fh5co-widget ">
 					<h3>VitualDesk.</h3>
 					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-					<p><a href="register4E.html">Learn More</a></p>
+					<p><a href="#">Learn More</a></p>
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 ">
 					<ul class="fh5co-footer-links">
