miner update-III

--- a/register4E.html
+++ b/register4E.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Login</title>
+        <title>Employee Registeration</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
@@ -58,16 +58,40 @@
             </a>
         </div>
         
-            <div class="login-box">
+            <div class="register-box">
                 <form action="#"  method="GET">
                     <h1>Employee Registeration</h1>
                     <div class="textbox">
+                        <i class="fa fa-building" aria-hidden="true"></i>
+                        <input type="text" placeholder="Company Name" name="companyName" value="">
+                    </div>
+                    <div class="textbox">
+                        <i class="fa fa-info" aria-hidden="true"></i>
+                        <input type="text" placeholder="Company ID" name="companyID" value="">
+                    </div>
+                    <div class="textbox">
+                        <i class="fa fa-briefcase" aria-hidden="true"></i>
+                        <input type="text" placeholder="Department" name="department" value="">
+                    </div>
+                     <div class="textbox">
+                        <i class="fa fa-id-badge" aria-hidden="true"></i>
+                        <input type="text" placeholder="Designation" name="designation" value="">
+                    </div>
+                    <div class="textbox">
+                        <i class="fa fa-user-o" aria-hidden="true"></i>
+                        <input type="text" placeholder="Username" name="username" value="">
+                    </div>
+                    <div class="textbox">
                         <i class="fa fa-user" aria-hidden="true"></i>
-                        <input type="text" placeholder="Email" name="Email" value="">
+                        <input type="email" placeholder="Email" name="email" value="">
                     </div>
                     <div class="textbox">
                         <i class="fa fa-lock" aria-hidden="true"></i>
-                        <input type="password" placeholder="Password" name="Password" value="">
+                        <input type="password" placeholder="Password" name="password" value="">
+                    </div>
+                    <div class="textbox">
+                        <i class="fa fa-lock" aria-hidden="true"></i>
+                        <input type="password" placeholder="Re-Enter Password" name="re-password" value="">
                     </div>
                     <input class="btn" type="submit" name="" value="Register">    
                 </form>
