--- a/login.html
+++ b/login.html
@@ -63,11 +63,11 @@
                     <h1>Login</h1>
                     <div class="textbox">
                         <i class="fa fa-user" aria-hidden="true"></i>
-                        <input type="email" placeholder="Email" name="Email" value="">
+                        <input type="email" placeholder="Email/Username" name="email" value="">
                     </div>
                     <div class="textbox">
                         <i class="fa fa-lock" aria-hidden="true"></i>
-                        <input type="password" placeholder="Password" name="Password" value="">
+                        <input type="password" placeholder="Password" name="password" value="">
                     </div>
                     <input class="btn" type="submit" name="" value="Sign in">    
                 </form>
