Basic idea of registering pages

--- a/register4B.html
+++ b/register4B.html
@@ -58,16 +58,40 @@
             </a>
         </div>
         
-            <div class="login-box">
+            <div class="register-box">
                 <form action="#"  method="GET">
                     <h1>Business Registeration</h1>
                     <div class="textbox">
-                        <i class="fa fa-briefcase" aria-hidden="true"></i>
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                        <input type="text" placeholder="Owner Name" name="ownername" value="">
+                    </div>
+                    <div class="textbox">
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                        <input type="text" placeholder="Company Name" name="companyName" value="">
+                    </div>
+                    <div class="textbox">
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                        <input type="text" placeholder="Company Category" name="companyCategory" value="">
+                    </div>
+                    <div class="textbox">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                        <input type="text" placeholder="Company Departments" name="companyDepartments" value="">
+                    </div>
+                    <div class="textbox">
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                        <input type="text" placeholder="Username" name="username" value="">
+                    </div>
+                    <div class="textbox">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
                         <input type="text" placeholder="Email" name="Email" value="">
                     </div>
                     <div class="textbox">
                         <i class="fa fa-lock" aria-hidden="true"></i>
                         <input type="password" placeholder="Password" name="Password" value="">
+                    </div>
+                    <div class="textbox">
+                        <i class="fa fa-lock" aria-hidden="true"></i>
+                        <input type="password" placeholder="Re-Enter Password" name="re-password" value="">
                     </div>
                     <input class="btn" type="submit" name="" value="Register">    
                 </form>
