--- a/register4E.html
+++ b/register4E.html
@@ -78,11 +78,11 @@
                         <input type="text" placeholder="Designation" name="designation" value="">
                     </div>
                     <div class="textbox">
-                        <i class="fa fa-user-o" aria-hidden="true"></i>
+                        <i class="fa fa-user" aria-hidden="true"></i>
                         <input type="text" placeholder="Username" name="username" value="">
                     </div>
                     <div class="textbox">
-                        <i class="fa fa-user" aria-hidden="true"></i>
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
                         <input type="email" placeholder="Email" name="email" value="">
                     </div>
                     <div class="textbox">
