customizing registering pages

--- a/login.html
+++ b/login.html
@@ -72,6 +72,7 @@
                     <input class="btn" type="submit" name="" value="Sign in">    
                 </form>
                 <hr>
+                <p class="register_text">Haven't Registered ?</p>
                 <a href="index.html#register">
                     <button class="btn">Register</button>
                 </a>
