--- a/register4E.html
+++ b/register4E.html
@@ -61,22 +61,22 @@
             <div class="register-box">
                 <form action="#"  method="GET">
                     <h1>Employee Registeration</h1>
-                    <div class="textbox">
+                    <!-- <div class="textbox">
                         <i class="fa fa-building" aria-hidden="true"></i>
                         <input type="text" placeholder="Company Name" name="companyName" value="">
-                    </div>
+                    </div> -->
                     <div class="textbox">
                         <i class="fa fa-info" aria-hidden="true"></i>
                         <input type="text" placeholder="Company ID" name="companyID" value="">
                     </div>
-                    <div class="textbox">
+                    <!-- <div class="textbox">
                         <i class="fa fa-briefcase" aria-hidden="true"></i>
                         <input type="text" placeholder="Department" name="department" value="">
                     </div>
                      <div class="textbox">
                         <i class="fa fa-id-badge" aria-hidden="true"></i>
                         <input type="text" placeholder="Designation" name="designation" value="">
-                    </div>
+                    </div> -->
                     <div class="textbox">
                         <i class="fa fa-user" aria-hidden="true"></i>
                         <input type="text" placeholder="Username" name="username" value="">
@@ -96,6 +96,7 @@
                     <input class="btn" type="submit" name="" value="Register">    
                 </form>
                 <hr>
+                <p class="login_text">Already Registered ?</p>
                 <a href="login.html">
                     <button class="btn">Login</button>
                 </a>
