--- a/register4B.html
+++ b/register4B.html
@@ -44,7 +44,7 @@
         <div class="back-btn">
             <a href="index.html">
                 <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                        viewBox="0 0 219.151 219.151" style="enable-background:new 0 0 219.151 219.151;" xml:space="preserve">
+                        viewBox="0 0 219.151 219.151" xml:space="preserve">
                     <g>
                         <path d="M109.576,219.151c60.419,0,109.573-49.156,109.573-109.576C219.149,49.156,169.995,0,109.576,0S0.002,49.156,0.002,109.575
                         C0.002,169.995,49.157,219.151,109.576,219.151z M109.576,15c52.148,0,94.573,42.426,94.574,94.575
@@ -61,7 +61,7 @@
             <div class="register-box">
                 <form action="#"  method="GET">
                     <h1>Business Registeration</h1>
-                    <div class="textbox">
+                    <!-- <div class="textbox">
                         <i class="fa fa-user" aria-hidden="true"></i>
                         <input type="text" placeholder="Owner Name" name="ownername" value="">
                     </div>
@@ -76,7 +76,7 @@
                     <div class="textbox">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
                         <input type="text" placeholder="Company Departments" name="companyDepartments" value="">
-                    </div>
+                    </div> -->
                     <div class="textbox">
                         <i class="fa fa-user" aria-hidden="true"></i>
                         <input type="text" placeholder="Username" name="username" value="">
@@ -93,9 +93,11 @@
                         <i class="fa fa-lock" aria-hidden="true"></i>
                         <input type="password" placeholder="Re-Enter Password" name="re-password" value="">
                     </div>
-                    <input class="btn" type="submit" name="" value="Register">    
+                    <input class="btn" id='finalRegister4B' type="submit" name="" value="Register">    
                 </form>
+                <button class="btn" id="businessDet">Continue</button>
                 <hr>
+                <p class="login_text">Already Registered ?</p>
                 <a href="login.html">
                     <button class="btn">Login</button>
                 </a>
@@ -118,7 +120,9 @@
     	    <!-- Stellar -->
 	        <script src="js/jquery.stellar.min.js"></script>
 	        <!-- Main -->
-    	    <script src="js/main.js"></script>
+            <script src="js/main.js"></script>
+            <!-- Custom -->
+            <script src="./js/register4B.js"></script>
 
     </body>
 </html>
