--- a/register4E.html
+++ b/register4E.html
@@ -41,10 +41,10 @@
     
     </head>
     <body>
-        <div class="back-btn">
+        <div class="bk-btn">
             <a href="index.html">
-                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                        viewBox="0 0 219.151 219.151" style="enable-background:new 0 0 219.151 219.151;" xml:space="preserve">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                 viewBox="0 0 219.151 219.151"  >
                     <g>
                         <path d="M109.576,219.151c60.419,0,109.573-49.156,109.573-109.576C219.149,49.156,169.995,0,109.576,0S0.002,49.156,0.002,109.575
                         C0.002,169.995,49.157,219.151,109.576,219.151z M109.576,15c52.148,0,94.573,42.426,94.574,94.575
@@ -58,8 +58,8 @@
             </a>
         </div>
         
-            <div class="register-box">
-                <form action="#"  method="GET">
+            <div class="register-box 4E">
+                <form action="employeeDetails.html"  method="GET"  enctype="multipart/form-data">
                     <h1>Employee Registeration</h1>
                     <!-- <div class="textbox">
                         <i class="fa fa-building" aria-hidden="true"></i>
@@ -93,8 +93,9 @@
                         <i class="fa fa-lock" aria-hidden="true"></i>
                         <input type="password" placeholder="Re-Enter Password" name="re-password" value="">
                     </div>
-                    <input class="btn" type="submit" name="" value="Register">    
+                    <input class="btn" id='finalRegister4B' type="submit" name="" value="Continue">    
                 </form>
+                <!-- <button class="btn" id="businessDet">Continue</button> -->
                 <hr>
                 <p class="login_text">Already Registered ?</p>
                 <a href="login.html">
