miner updates-IV

--- a/employeeDetails.html
+++ b/employeeDetails.html
@@ -42,7 +42,7 @@
     </head>
     <body>
         <div class="bk-btn">
-            <a href="index.html">
+            <a href="register4E.html">
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                  viewBox="0 0 219.151 219.151"  >
                     <g>
@@ -57,28 +57,7 @@
                 </svg>
             </a>
         </div>
-        
-            <div class="register-box ED">
-                <form action="#"  method="GET"  enctype="multipart/form-data">
-                    <h1>Employee Registeration</h1>
-                    <div class="textbox">
-                        <i class="fa fa-building" aria-hidden="true"></i>
-                        <input type="text" placeholder="Company Name" name="companyName" value="">
-                    </div>
-                    <div class="textbox">
-                        <i class="fa fa-briefcase" aria-hidden="true"></i>
-                        <input type="text" placeholder="Department" name="department" value="">
-                    </div>
-                     <div class="textbox">
-                        <i class="fa fa-id-badge" aria-hidden="true"></i>
-                        <input type="text" placeholder="Designation" name="designation" value="">
-                    </div>
-                    <input class="btn" id='finalRegister4B' type="submit" name="" value="Register">    
-                </form>
-                <!-- <button class="btn" id="businessDet">Continue</button> -->
-            </div>
-
-
+        <div id="result"></div>
             <!-- jQuery -->
     	    <script src="js/jquery.min.js"></script>
 	        <!-- jQuery Easing -->
@@ -96,6 +75,12 @@
 	        <script src="js/jquery.stellar.min.js"></script>
 	        <!-- Main -->
     	    <script src="js/main.js"></script>
-
+        <script>
+            const result = document.getElementById('result');
+            new URLSearchParams(window.location.search).forEach((value,name)=>{
+                resultList.appened(`${name}:${value}`)
+                resultList.appened(document.createElement('br'))
+            });
+        </script>
     </body>
 </html>
