--- a/register4B.html
+++ b/register4B.html
@@ -78,8 +78,14 @@
                     </div> -->
                     <div class="textbox">
                         <i class="fa fa-user" aria-hidden="true"></i>
-                        <input type="text" placeholder="Username" id="username" name="username" value="">
+                        <input type="text" placeholder="First Name" id="firstName" name="firstName" value="">
                     </div>
+                    <div class="textbox">
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                        <input type="text" placeholder="Last Name" id="lastName" name="lastName" value="">
+                    </div>
+                    <br>
+                    <br>
                     <div class="textbox">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
                         <input type="text" placeholder="Email" id="email" name="Email" value="">
