--- a/login.html
+++ b/login.html
@@ -63,7 +63,7 @@
                     <h1>Login</h1>
                     <div class="textbox">
                         <i class="fa fa-user" aria-hidden="true"></i>
-                        <input type="email" placeholder="Email/Username" name="email" value="">
+                        <input type="text" placeholder="Employee ID" name="employeeID" value="">
                     </div>
                     <div class="textbox">
                         <i class="fa fa-lock" aria-hidden="true"></i>
