--- a/services.html
+++ b/services.html
@@ -59,20 +59,9 @@
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li class="has-dropdown active">
-							<a href="services.html">Services</a>
-							<ul class="dropdown">
-								<li><a href="#">Web Design</a></li>
-								<li><a href="#">eCommerce</a></li>
-								<li><a href="#">Branding</a></li>
-								<li><a href="#">API</a></li>
-							</ul>
-						</li>
-
-						<li><a href="products.html">Products</a></li>
+						<li class="active"><a href="index.html">Home</a></li>
+						<li><a href="services.html">Features</a></li>
 						<li><a href="about.html">About</a></li>
-						<li><a href="blog.html">Blog</a></li>
 						<li><a href="contact.html">Contact</a></li>
 						<li class="btn-cta"><a href="login.html"><span>LOGIN</span></a></li>
 					</ul>
