back btn glitch fixed

--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
     
     </head>
     <body>
-        <div class="bk-btn">
+        <div class="bk-btn" width=50px>
             <a href="index.html">
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                  viewBox="0 0 219.151 219.151"  >
@@ -74,7 +74,7 @@
                 <hr>
                 <p class="register_text">Haven't Registered ?</p>
                 <a href="index.html#register">
-                    <button class="btn">Register</button>
+                    <button type="button" class="btn">Register</button>
                 </a>
             </div>
 
