--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@
 
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
@@ -78,7 +79,7 @@
 				<div class="col-md-7 text-left">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeInUp">
-							<h1 class="mb30">About Us</h1>
+							<h1 class="mb30">Who are We?</h1>
 						</div>
 					</div>
 				</div>
@@ -92,18 +93,18 @@
 		<div class="container">
 			<div class="row animate-box row-pb-md">
 				<div class="col-md-8 col-md-offset-2 text-left fh5co-heading">
-					<span>Productive Staff</span>
-					<h2>Meet Our Staff</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<span>Our Team</span>
+					<h2>The brains behind VirtualDesk</h2>
+					<p>A team of focussed, passionate individuals working day and night to make your lives easier.</p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-3 col-sm-4 animate-box" data-animate-effect="fadeIn">
 					<div class="fh5co-staff">
-						<img src="images/person1.jpg" alt="Free HTML5 Templates by gettemplates.co">
-						<h3>Jean Smith</h3>
+						<img src="images/profile/p11.jpeg" alt="Free HTML5 Templates by gettemplates.co">
+						<h3>Rachana Patel</h3>
 						<strong class="role">Web Designer</strong>
-						<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+						<p>Dedicated in making our websites look sharp,appealing and informative to our users.</p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
@@ -112,12 +113,12 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-3 col-sm-4 animate-box" data-animate-effect="fadeIn">
 					<div class="fh5co-staff">
-						<img src="images/person2.jpg" alt="Free HTML5 Templates by gettemplates.co">
-						<h3>Hush Raven</h3>
+						<img src="images/profile/p2.jpeg" alt="Free HTML5 Templates by gettemplates.co">
+						<h3>Anuj Nair</h3>
 						<strong class="role">Front-end Developer</strong>
-						<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+						<p>Works passionately for implementing visual and interactive elements that users engage with.<br></p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
@@ -126,12 +127,26 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-3 col-sm-4 animate-box" data-animate-effect="fadeIn">
 					<div class="fh5co-staff">
-						<img src="images/person3.jpg" alt="Free HTML5 Templates by gettemplates.co">
-						<h3>Alex King</h3>
+						<img src="images/profile/p33.jpeg" alt="Free HTML5 Templates by gettemplates.co">
+						<h3>Ayush Patel</h3>
 						<strong class="role">Back-end Developer</strong>
-						<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+						<p>Shoulders the responsibilities for server-side web application logic and integration.</p>
+						<ul class="fh5co-social-icons">
+							<li><a href="#"><i class="icon-facebook"></i></a></li>
+							<li><a href="#"><i class="icon-twitter"></i></a></li>
+							<li><a href="#"><i class="icon-dribbble"></i></a></li>
+							<li><a href="#"><i class="icon-github"></i></a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-md-3 col-sm-4 animate-box" data-animate-effect="fadeIn">
+					<div class="fh5co-staff">
+						<img src="images/profile/p44.jpeg" alt="Free HTML5 Templates by gettemplates.co">
+						<h3>Trushant Adeshra</h3>
+						<strong class="role">Back-end Developer</strong>
+						<p>Creates, codes, and improves the server and databases for seamless experience.</p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
@@ -201,9 +216,9 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<span>Let's work together</span>
-					<h2>Try this template for free</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-					<p><button type="submit" class="btn btn-default">Get In Touch</button></p>
+					<h2>Collabarate with Us</h2>
+					<p>Let us help you organize your workspace from home</p>
+					<p><a href="contact.html"><button type="submit" class="btn btn-primary">Get In Touch</button></a></p>
 				</div>
 			</div>
 		</div>
@@ -214,46 +229,14 @@
 			<div class="row row-pb-md">
 				<div class="col-md-4 fh5co-widget ">
 					<h3>VitualDesk.</h3>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-					<p><a href="#">Learn More</a></p>
+					<p>Bringing the efficiency of workspace in your living room.</p>
+					<p><a href="services.html">Learn More</a></p>
 				</div>
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 ">
-					<ul class="fh5co-footer-links">
-						<li><a href="#">About</a></li>
-						<li><a href="#">Help</a></li>
-						<li><a href="#">Contact</a></li>
-						<li><a href="#">Terms</a></li>
-						<li><a href="#">Meetups</a></li>
-					</ul>
-				</div>
-
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 ">
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Shop</a></li>
-						<li><a href="#">Privacy</a></li>
-						<li><a href="#">Testimonials</a></li>
-						<li><a href="#">Handbook</a></li>
-						<li><a href="#">Held Desk</a></li>
-					</ul>
-				</div>
-
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 ">
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Find Designers</a></li>
-						<li><a href="#">Find Developers</a></li>
-						<li><a href="#">Teams</a></li>
-						<li><a href="#">Advertise</a></li>
-						<li><a href="#">API</a></li>
-					</ul>
-				</div>
+				
 			</div>
 
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
-					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://gettemplates.co/" target="_blank">GetTemplates.co</a> Demo Images: <a href="http://pixeden.com/" target="_blank">Pixeden</a> &amp; <a href="http://unsplash.com/" target="_blank">Unsplash</a></small>
-					</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
