configured the registering pages

--- a/register4B.html
+++ b/register4B.html
@@ -49,22 +49,6 @@
         <form id="form" action="companyDetails.html"  method="GET"  enctype="multipart/form-data">
             <div class="register-box BR">
                     <h1>Business Registeration</h1>
-                    <!-- <div class="textbox">
-                        <i class="fa fa-user" aria-hidden="true"></i>
-                        <input type="text" placeholder="Owner Name" name="ownername" value="">
-                    </div>
-                    <div class="textbox">
-                        <i class="fa fa-user" aria-hidden="true"></i>
-                        <input type="text" placeholder="Company Name" name="companyName" value="">
-                    </div>
-                    <div class="textbox">
-                        <i class="fa fa-user" aria-hidden="true"></i>
-                        <input type="text" placeholder="Company Category" name="companyCategory" value="">
-                    </div>
-                    <div class="textbox">
-                        <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <input type="text" placeholder="Company Departments" name="companyDepartments" value="">
-                    </div> -->
                     <div class="textbox">
                         <i class="fa fa-user" aria-hidden="true"></i>
                         <input type="text" placeholder="First Name" id="firstName" name="firstName" value="">
@@ -87,7 +71,7 @@
                         <i class="fa fa-lock" aria-hidden="true"></i>
                         <input type="password" placeholder="Re-Enter Password" id="re_passwd" name="re-password" value="">
                     </div>
-                    <button id='btn-4E' type="button" class="btn">Continue</button>    
+                    <button id='btn-4B' type="button" class="btn">Continue</button>    
                 <!-- <button class="btn" id="businessDet">Continue</button> -->
                 <hr>
                 <p class="login_text">Already Registered ?</p>
