--- a/about.html
+++ b/about.html
@@ -60,9 +60,9 @@
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
-						<li class="active"><a href="index.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="services.html">Features</a></li>
-						<li><a href="about.html">About</a></li>
+						<li class="active"><a href="about.html">About</a></li>
 						<li><a href="contact.html">Contact</a></li>
 						<li class="btn-cta"><a href="login.html"><span>LOGIN</span></a></li>
 					</ul>
