--- a/register4E.html
+++ b/register4E.html
@@ -33,6 +33,7 @@
 
 		<!-- Theme style  -->
 		<link rel="stylesheet" href="css/style.css" />
+		<!-- <link rel="stylesheet" href="css/animate.min.css" /> -->
 
 		<!-- Modernizr JS -->
 		<script src="js/modernizr-2.6.2.min.js"></script>
@@ -40,7 +41,8 @@
 		<!--[if lt IE 9]>
 			<script src="js/respond.min.js"></script>
 		<![endif]-->
-		<link rel="stylesheet" href="css/login.css" />
+        <link rel="stylesheet" href="css/login.css" />
+
 	</head>
 	<body>
 		<div class="bk-btn">
@@ -57,10 +59,6 @@
 			>
 				<div class="register-box ER">
 					<h1>Employee Registeration</h1>
-					<!-- <div class="textbox">
-                        <i class="fa fa-building" aria-hidden="true"></i>
-                        <input type="text" placeholder="Company Name" name="companyName" value="">
-                    </div> -->
 					<div class="textbox">
 						<i class="fa fa-info" aria-hidden="true"></i>
 						<input
@@ -70,14 +68,6 @@
 							value=""
 						/>
 					</div>
-					<!-- <div class="textbox">
-                        <i class="fa fa-briefcase" aria-hidden="true"></i>
-                        <input type="text" placeholder="Department" name="department" value="">
-                    </div>
-                     <div class="textbox">
-                        <i class="fa fa-id-badge" aria-hidden="true"></i>
-                        <input type="text" placeholder="Designation" name="designation" value="">
-                    </div> -->
 					<div class="textbox">
 						<i class="fa fa-user" aria-hidden="true"></i>
 						<input
