--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
             </a>        
         </div>
             <div class="login-box">
-                <form action="#"  method="GET" enctype="application/x-www-form-urlencoded">
+                <form action="./dashboard.html"  method="GET" enctype="application/x-www-form-urlencoded">
                     <h1>Login</h1>
                     <div class="textbox">
                         <i class="fa fa-user" aria-hidden="true"></i>
