--- a/register4B.html
+++ b/register4B.html
@@ -46,7 +46,7 @@
                 <img src="./images/icons/back-button.svg" alt="back" srcset="">
             </a>
         </div>
-        <form id="form" action="companyDetails.html"  method="GET"  enctype="multipart/form-data">
+        <form id="form" action="./index.html#register"  method="GET"  enctype="multipart/form-data">
             <div class="register-box BR">
                     <h1>Business Registeration</h1>
                     <div class="textbox">
