--- a/register4E.html
+++ b/register4E.html
@@ -53,7 +53,7 @@
 
 		<div class="mainRegisterBox">
 			<form
-				action="employeeDetails.html"
+				action="./dashboard.html"
 				method="GET"
 				enctype="multipart/form-data"
 			>
