changes in Dashboard done

--- a/charts.html
+++ b/charts.html
@@ -63,9 +63,9 @@
         </a>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Custom Components:</h6>
-            <a class="collapse-item" href="buttons.html">Buttons</a>
-            <a class="collapse-item" href="cards.html">Cards</a>
+            <h6 class="collapse-header">Company:</h6>
+            <a class="collapse-item" href="#">Org Chart</a>
+            <a class="collapse-item" href="#">Doc Approval Interface</a>
           </div>
         </div>
       </li>
@@ -78,11 +78,11 @@
         </a>
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Custom Utilities:</h6>
-            <a class="collapse-item" href="utilities-color.html">Colors</a>
-            <a class="collapse-item" href="utilities-border.html">Borders</a>
-            <a class="collapse-item" href="utilities-animation.html">Animations</a>
-            <a class="collapse-item" href="utilities-other.html">Other</a>
+            <h6 class="collapse-header">Utility Services:</h6>
+            <a class="collapse-item" href="#">Online Meeting</a>
+            <a class="collapse-item" href="#">Mail Interface</a>
+            <a class="collapse-item" href="#">Chat Interface</a>
+            <a class="collapse-item" href="#">Call Interface</a>
           </div>
         </div>
       </li>
@@ -99,18 +99,19 @@
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
           <i class="fas fa-fw fa-folder"></i>
-          <span>Pages</span>
+          <span>Edits</span>
         </a>
         <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Login Screens:</h6>
-            <a class="collapse-item" href="login.html">Login</a>
-            <a class="collapse-item" href="register.html">Register</a>
-            <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
+            <h6 class="collapse-header">Personal</h6>
+            <a class="collapse-item" href="#">Edit Profile</a>
+            <a class="collapse-item" href="#">Change Password</a>
+            <a class="collapse-item" href="#">Others</a>
+
             <div class="collapse-divider"></div>
-            <h6 class="collapse-header">Other Pages:</h6>
-            <a class="collapse-item" href="404.html">404 Page</a>
-            <a class="collapse-item" href="blank.html">Blank Page</a>
+            <h6 class="collapse-header">Company</h6>
+            <a class="collapse-item" href="#">Edit Designation</a>
+            <a class="collapse-item" href="#">Company Hierarchy Chart</a>
           </div>
         </div>
       </li>
